Fix javadoc img tags